midnight-party section done

--- a/index.html
+++ b/index.html
@@ -15,27 +15,23 @@
     </header>
 
     <main>
+      <div class="percentage-sec">
+        <h1 class="percenatge">65% OFF</h1>
+        <h5 class="holidays-txt">OUR HOLIDAY DEALS ARE BETTER</h5>
+        <h3 class="catagories-txt">ALL CATEGORIES</h3>
+        <img src="/images/New Year Photo.png" alt="New Year Photo" />
+      </div>
 
-        <div class="percentage-sec">
-            <h1 class="percenatge">65% OFF</h1>
-            <h5 class="holidays-txt">OUR HOLIDAY DEALS ARE BETTER</h5>
-            <h3 class="catagories-txt">ALL CATEGORIES</h3>
-            <img src="/images/New Year Photo.png" alt="New Year Photo">
-        </div>
+      <div class="midnight-party">
+        <h1 class="party-greet">Welcome to midnight party</h1>
 
-        <div class="midnight-party">
-            <h1 class="party-greet">
-                Welcome to midnight party
-            </h1>
+        <h5 class="party-text">
+          Join us under the starry & don't miss out on the festivities the
+          countdown to an unforgettable night starts now!
+        </h5>
 
-            <h5 class="party-text">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </h5>
-
-            <button class="btn-join">Join Now</button>
-        </div>
-
-
-
-
+        <button class="btn-join">JOIN NOW</button>
+      </div>
     </main>
 
     <footer></footer>
