--- a/index.html
+++ b/index.html
@@ -23,15 +23,37 @@
       </div>
 
       <div class="midnight-party">
-        <h1 class="party-greet">Welcome to midnight party</h1>
+        <div class="midnight-desc">
+          <h1 class="party-greet">Welcome to midnight party</h1>
 
-        <h5 class="party-text">
-          Join us under the starry & don't miss out on the festivities the
-          countdown to an unforgettable night starts now!
-        </h5>
+          <h5 class="party-text">
+            Join us under the starry & don't miss out on the festivities the
+            countdown to an unforgettable night starts now!
+          </h5>
+
+          <button class="btn-join">JOIN NOW</button>
+        </div>
+
+        <div>
+          <img src="images/Group 70.png" alt="2024 text" />
+        </div>
+      </div>
+
+      <div class="party-venue">
+        <h3 class="party-date">
+          <span class="txt-orng">Place:</span> New Park Hotel
+        </h3>
+        <h3 class="party-date">
+          <span class="txt-orng">Date:</span> 31 December Night 2023
+        </h3>
+        <h3 class="party-date">
+          <span class="txt-orng">Time:</span> Evening 7.30 pm to 12.30 am
+        </h3>
 
         <button class="btn-join">JOIN NOW</button>
       </div>
+
+
     </main>
 
     <footer></footer>
