gallery section done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 class="percenatge">65% OFF</h1>
         <h5 class="holidays-txt">OUR HOLIDAY DEALS ARE BETTER</h5>
         <h3 class="catagories-txt">ALL CATEGORIES</h3>
-        <img src="/images/New Year Photo.png" alt="New Year Photo" />
+        <img src="./images/NewYearPhoto.png" alt="New Year Photo" />
       </div>
 
       <div class="midnight-party">
@@ -52,6 +52,45 @@
 
         <button class="btn-join">JOIN NOW</button>
       </div>
+
+      <div class="gallery-section">
+        <div class="gallery-text">
+          <h3 class="gallery-title">THE BEST GIFTS</h3>
+          <h1 class="gallery-header">Our Awesome Portfolio</h1>
+          <p class="gallery-desc">
+            Our Top Selling Products with 1 Year Gurantee
+          </p>
+        </div>
+
+        <div class="gallery-images">
+          <div>
+            <img src="./images/Rectangle 3.png" alt="" />
+            <img src="./images/Rectangle 4.png" alt="" />
+            <img src="./images/Rectangle 5.png" alt="" />
+          </div>
+
+          <div>
+            <img src="./images/Rectangle 6.png" alt="" />
+            <img src="./images/Rectangle 7.png" alt="" />
+            <img src="./images/Rectangle 8.png" alt="" />
+          </div>
+        </div>
+      </div>
+
+      <div class="subscribe-section">
+        <img src="./images/Group 61.png" alt="">
+        <h1 class="subscribe-header">
+          Subscribe Newsletter
+        </h1>
+
+        <h3 class="subscribe-desc">
+          Subscribe Our News Letter to get all the news first  
+        </h3>
+
+        <input type="email" placeholder="user@gmail.com" name="" id="">
+
+      </div>
+
 
 
     </main>
