--- a/index.html
+++ b/index.html
@@ -78,23 +78,57 @@
       </div>
 
       <div class="subscribe-section">
-        <img src="./images/Group 61.png" alt="">
-        <h1 class="subscribe-header">
-          Subscribe Newsletter
-        </h1>
+        <img src="./images/Group 61.png" alt="" />
+        <h1 class="subscribe-header">Subscribe Newsletter</h1>
 
         <h3 class="subscribe-desc">
-          Subscribe Our News Letter to get all the news first  
+          Subscribe Our News Letter to get all the news first
         </h3>
 
-        <input type="email" placeholder="user@gmail.com" name="" id="">
+        <form>
+          <input type="email" placeholder="user@gmail.com" name="" id="" />
+          <button type="submit">Subscribe</button>
+        </form>
+      </div>
+    </main>
 
+    <footer>
+
+      <div class="footer-top">
+        <div class="address">
+          <p>1600 Amphitheatre Parkway <br>
+            Mountain View, CA 94043, USA</p>
+        </div>
+        <div class="contact">
+          <p> <img class="space" src="./images/Call.png" alt="">+00 123 584 126</p>
+          <p><img class="space"  src="./images/Website.png" alt="">www.website.com</p>
+        </div>
+        
+      </div>
+      <hr>
+
+      <div class="social-links">
+
+        <img src="./images/Facebook.png" alt="">
+        <img src="./images/Instagram.png" alt="">
+        <img src="./images/Linkedin.png" alt="">
+        <img src="./images/Twitter.png" alt="">
+        
+
+      </div>
+
+      <hr>
+
+      <div class="copyright">
+        <small>&copy All Rights Reserved-Nihan</small>
+        <button class="unsubscribe">Unsubscribe</button>
       </div>
 
 
 
-    </main>
 
-    <footer></footer>
+
+
+    </footer>
   </body>
 </html>
