--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <div>
-          <img src="images/Group 70.png" alt="2024 text" />
+          <img src="./images/Group-70.png" alt="2024 text" />
         </div>
       </div>
 
@@ -53,6 +53,32 @@
         <button class="btn-join">JOIN NOW</button>
       </div>
 
+      <div class="circle-image-section">
+        <div class="circle-text">
+          <h3 class="text-title">NEW BEST OFFER</h3>
+          <h1 class="text-header">Coming Soon</h1>
+          <p class="text-desc">
+            Dolor sit amet consectetur. Consequat eget consectetur <br> maecenas sed
+            molestie malesuada. Ipsum <br> sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+        </div>
+
+        <div class="circle-circle">
+          <div class="circle">
+            <img src="./images/Ellipse-1.png" alt="image" />
+          </div>
+        </div>
+
+        <div class="circle-image">
+          <h1 class="year">2024</h1>
+          <h4 class="image-desc">
+            Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas sed.
+          </h4>
+          <img src="./images/Group-96.png" alt="a picture" />
+        </div>
+      </div>
+
       <div class="gallery-section">
         <div class="gallery-text">
           <h3 class="gallery-title">THE BEST GIFTS</h3>
@@ -64,21 +90,21 @@
 
         <div class="gallery-images">
           <div>
-            <img src="./images/Rectangle 3.png" alt="" />
-            <img src="./images/Rectangle 4.png" alt="" />
-            <img src="./images/Rectangle 5.png" alt="" />
+            <img src="./images/Rectangle-3.png" alt="" />
+            <img src="./images/Rectangle-4.png" alt="" />
+            <img src="./images/Rectangle-5.png" alt="" />
           </div>
 
           <div>
-            <img src="./images/Rectangle 6.png" alt="" />
-            <img src="./images/Rectangle 7.png" alt="" />
-            <img src="./images/Rectangle 8.png" alt="" />
+            <img src="./images/Rectangle-6.png" alt="" />
+            <img src="./images/Rectangle-7.png" alt="" />
+            <img src="./images/Rectangle-8.png" alt="" />
           </div>
         </div>
       </div>
 
       <div class="subscribe-section">
-        <img src="./images/Group 61.png" alt="" />
+        <img src="./images/Group-61.png" alt="" />
         <h1 class="subscribe-header">Subscribe Newsletter</h1>
 
         <h3 class="subscribe-desc">
@@ -93,42 +119,41 @@
     </main>
 
     <footer>
-
       <div class="footer-top">
         <div class="address">
-          <p>1600 Amphitheatre Parkway <br>
-            Mountain View, CA 94043, USA</p>
+          <p>
+            1600 Amphitheatre Parkway <br />
+            Mountain View, CA 94043, USA
+          </p>
         </div>
         <div class="contact">
-          <p> <img class="space" src="./images/Call.png" alt="">+00 123 584 126</p>
-          <p><img class="space"  src="./images/Website.png" alt="">www.website.com</p>
+          <p>
+            <img class="space" src="./images/Call.png" alt="" />+00 123 584 126
+          </p>
+          <p>
+            <img
+              class="space"
+              src="./images/Website.png"
+              alt=""
+            />www.website.com
+          </p>
         </div>
-        
       </div>
-      <hr>
+      <hr />
 
       <div class="social-links">
-
-        <img src="./images/Facebook.png" alt="">
-        <img src="./images/Instagram.png" alt="">
-        <img src="./images/Linkedin.png" alt="">
-        <img src="./images/Twitter.png" alt="">
-        
-
+        <img src="./images/Facebook.png" alt="" />
+        <img src="./images/Instagram.png" alt="" />
+        <img src="./images/Linkedin.png" alt="" />
+        <img src="./images/Twitter.png" alt="" />
       </div>
 
-      <hr>
+      <hr />
 
       <div class="copyright">
         <small>&copy All Rights Reserved-Nihan</small>
         <button class="unsubscribe">Unsubscribe</button>
       </div>
-
-
-
-
-
-
     </footer>
   </body>
 </html>
