irrelevant text replaced

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     </header>
 
     <main>
-      <div class="percentage-sec">
+      <section class="percentage-sec">
         <h1 class="percenatge">65% OFF</h1>
         <h5 class="holidays-txt">OUR HOLIDAY DEALS ARE BETTER</h5>
         <h3 class="catagories-txt">ALL CATEGORIES</h3>
         <img src="./images/NewYearPhoto.png" alt="New Year Photo" />
-      </div>
+      </section>
 
-      <div class="midnight-party">
+      <section class="midnight-party">
         <div class="midnight-desc">
           <h1 class="party-greet">Welcome to midnight party</h1>
 
@@ -37,9 +37,9 @@
         <div>
           <img src="./images/Group-70.png" alt="2024 text" />
         </div>
-      </div>
+      </section>
 
-      <div class="party-venue">
+      <section class="party-venue">
         <h3 class="party-date">
           <span class="txt-orng">Place:</span> New Park Hotel
         </h3>
@@ -51,16 +51,15 @@
         </h3>
 
         <button class="btn-join">JOIN NOW</button>
-      </div>
+      </section>
 
-      <div class="circle-image-section">
+      <section class="circle-image-section">
         <div class="circle-text">
           <h3 class="text-title">NEW BEST OFFER</h3>
           <h1 class="text-header">Coming Soon</h1>
           <p class="text-desc">
-            Dolor sit amet consectetur. Consequat eget consectetur <br> maecenas sed
-            molestie malesuada. Ipsum <br> sed sodales risus ut pellentesque vel
-            euismod.
+            Celebrate the start of 2024 with huge <br />
+            discount on our amazing range of products.
           </p>
         </div>
 
@@ -73,13 +72,47 @@
         <div class="circle-image">
           <h1 class="year">2024</h1>
           <h4 class="image-desc">
-            Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas sed.
+            May this year all your wishes filled up <br />
+            Happy New Year.
           </h4>
           <img src="./images/Group-96.png" alt="a picture" />
         </div>
-      </div>
+      </section>
 
-      <div class="gallery-section">
+      <section class="func-holidays">
+        <div class="txt-func-holi">
+          <h3 class="txt-func-title">WHAT IS FUNCTIONAL</h3>
+          <h1 class="txt-func-header">
+            <span class="bold-orng">Holidays</span> Sale 50%
+          </h1>
+
+          <h4 class="txt-func-desc">
+            Cheers to a spectacular New Year! 🎉 To kick off 2024 with a bang,
+            we're offering an incredible 50% discount on ALL our products. Shop
+            now and indulge in the joy of savings!
+          </h4>
+        </div>
+
+        <div class="img-func-holi">
+          <img
+            class="img-right"
+            src="./images/Rectangle-1.png"
+            alt="a picture"
+          />
+          <img
+            class="img-overflow"
+            src="./images/Group-75.png"
+            alt="a picture"
+          />
+          <img
+            class="img-bottom"
+            src="./images/Rectangle-2.png"
+            alt="a picture"
+          />
+        </div>
+      </section>
+
+      <section class="gallery-section">
         <div class="gallery-text">
           <h3 class="gallery-title">THE BEST GIFTS</h3>
           <h1 class="gallery-header">Our Awesome Portfolio</h1>
@@ -101,9 +134,9 @@
             <img src="./images/Rectangle-8.png" alt="" />
           </div>
         </div>
-      </div>
+      </section>
 
-      <div class="subscribe-section">
+      <section class="subscribe-section">
         <img src="./images/Group-61.png" alt="" />
         <h1 class="subscribe-header">Subscribe Newsletter</h1>
 
@@ -115,7 +148,7 @@
           <input type="email" placeholder="user@gmail.com" name="" id="" />
           <button type="submit">Subscribe</button>
         </form>
-      </div>
+      </section>
     </main>
 
     <footer>
@@ -127,16 +160,16 @@
           </p>
         </div>
         <div class="contact">
-          <p>
+          <div class="phone">
             <img class="space" src="./images/Call.png" alt="" />+00 123 584 126
-          </p>
-          <p>
+          </div>
+          <div class="website">
             <img
               class="space"
               src="./images/Website.png"
               alt=""
             />www.website.com
-          </p>
+          </div>
         </div>
       </div>
       <hr />
@@ -152,7 +185,7 @@
 
       <div class="copyright">
         <small>&copy All Rights Reserved-Nihan</small>
-        <button class="unsubscribe">Unsubscribe</button>
+        <button>Unsubscribe</button>
       </div>
     </footer>
   </body>
