image hover done

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <span class="txt-orng">Time:</span> Evening 7.30 pm to 12.30 am
         </h3>
 
-        <button class="btn-join">JOIN NOW</button>
+        <button class="btn-join-venue">JOIN NOW</button>
       </section>
 
       <section class="circle-image-section">
@@ -184,7 +184,7 @@
       <hr />
 
       <div class="copyright">
-        <small>&copy All Rights Reserved-Nihan</small>
+        <small>&copy All Rights Reserved-<i>NIHAN</i> </small>
         <button>Unsubscribe</button>
       </div>
     </footer>
