--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
 
         <div class="img-func-holi">
           <img
+            class="img-discount"
+            src="./images/Group-44.png"
+            alt="a picture"
+          />
+          <img
             class="img-right"
             src="./images/Rectangle-1.png"
             alt="a picture"
@@ -145,7 +150,12 @@
         </h3>
 
         <form>
-          <input type="email" placeholder="user@gmail.com" name="" id="" />
+          <input
+            type="email"
+            placeholder="user@gmail.com"
+            name="input-txt"
+            id=""
+          />
           <button type="submit">Subscribe</button>
         </form>
       </section>
@@ -161,7 +171,7 @@
         </div>
         <div class="contact">
           <div class="phone">
-            <img class="space" src="./images/Call.png" alt="" />+00 123 584 126
+            <img class="space" src="./images/Call.png" alt="" />+880 1631 235014
           </div>
           <div class="website">
             <img
@@ -172,6 +182,7 @@
           </div>
         </div>
       </div>
+
       <hr />
 
       <div class="social-links">
@@ -184,7 +195,7 @@
       <hr />
 
       <div class="copyright">
-        <small>&copy All Rights Reserved-<i>NIHAN</i> </small>
+        <small>&copy All Rights Reserved-<i>NIHAN</i></small>
         <button>Unsubscribe</button>
       </div>
     </footer>
